#### **UKR**
**Повна підтримка 19.0.1**

**756**:
* [**Виправлено**] [Semi-Stock] - виправлено помилку, через яку не працював онлайн
* [**Виправлено**] [DBI] - повернуто англійську версію за замовчанням (хоч і не новіша, але працює все одно стабільно, наразі оновлюється kbit росмійськомовна версія, яку можна скачати через Uberhand > packages > settings)

**756**:
* [**Виправлено**] [MissionControl 0.12.0](https://github.com/ndeadly/MissionControl/releases/tag/v0.12.0) - прибрано великотку

**754**:
* [**Оновлено**] [sys-con 1.4.2](https://github.com/o0Zz/sys-con/releases/tag/1.4.2) - виправлено регресію кнопки guide на xbox one, додано підтримку 8bitdo ultimate 2c та вирішено проблему з пріоритетністю профілів hid контролерів
* [**Додано**] [Кефір] - додан файл `warmboot_mariko/wb_14.bin` для запобігання помилки warmboot

**753**:
* [**Оновлено**] [sys-con 1.4.2](https://github.com/o0Zz/sys-con/releases/tag/1.4.2) - підтримка 19.0.0

**752**:
* [**Оновлено**] [Atmosphere 1.8.0pre](https://github.com/rashevskyv/Kefirosphere) - зібрано з останніми коммітами з частковою підтримкою 19.0.0, додані сігпатчі, додан фікс, виправляючий роботу старих форвардеров на 19.0.0
    * [**Детальніше про зміни в Atmosphere**](https://github.com/Atmosphere-NX/Atmosphere/releases)
* [**Оновлено**] [MissionControl 0.12.0](https://github.com/ndeadly/MissionControl/releases/tag/v0.12.0) - підтримка 19.0.0

**750**:
* [**Оновлено**] [Atmosphere 1.8.0pre](https://github.com/rashevskyv/Kefirosphere) - зібрано з останніми коммітами з частковою підтримкою 19.0.0
    * [**Детальніше про зміни в Atmosphere**](https://github.com/Atmosphere-NX/Atmosphere/releases)
* [**Оновлено**] [hekate 6.2.2](https://github.com/CTCaer/hekate/) - підтримка 19.0.0
* [**Оновлено**] [Lockpick_RCM] - підтримка 19.0.0

____

#### **ENG**
**Full support for 19.0.1**

**756**:
* [**Fixed**] [MissionControl 0.12.0](https://github.com/ndeadly/MissionControl/releases/tag/v0.12.0) - removed easter egg

**754**: