@@ -707,10 +707,10 @@ hekate
 <h4 id="ukr"><strong>UKR</strong></h4>
 <p><strong>Повна підтримка 19.0.1</strong></p>
 
-<p><strong>756</strong>:</p>
+<p><strong>758</strong>:</p>
 <ul>
   <li>[<strong>Виправлено</strong>] [Semi-Stock] - виправлено помилку, через яку не працював онлайн</li>
-  <li>[<strong>Виправлено</strong>] [DBI] - повернуто англійську версію за замовчанням (хоч і не новіша, але працює все одно стабільно, наразі оновлюється kbit росмійськомовна версія, яку можна скачати через Uberhand &gt; packages &gt; settings)</li>
+  <li>[<strong>Виправлено</strong>] [DBI] - повернуто англійську версію за замовчанням (хоч і не новіша, але працює все одно стабільно, наразі оновлюється лише росмійськомовна версія, яку можна скачати через Uberhand &gt; packages &gt; settings)</li>
 </ul>
 
 <p><strong>756</strong>:</p>
@@ -755,6 +755,12 @@ hekate
 <h4 id="eng"><strong>ENG</strong></h4>
 <p><strong>Full support for 19.0.1</strong></p>
 
+<p><strong>758</strong>:</p>
+<ul>
+  <li>[<strong>Fixed</strong>] [Semi-Stock] - fixed an issue that caused the online mode not to work</li>
+  <li>[<strong>Fixed</strong>] [DBI] - reverted to the default English version (though not newer, it still works stably; currently, the Russian version only is being updated, which can be downloaded via Uberhand &gt; packages &gt; settings)</li>
+</ul>
+
 <p><strong>756</strong>:</p>
 <ul>
   <li>[<strong>Fixed</strong>] <a href="https://github.com/ndeadly/MissionControl/releases/tag/v0.12.0">MissionControl 0.12.0</a> - removed easter egg</li>
@@ -796,6 +802,12 @@ hekate
 
 <h4 id="rus"><strong>RUS</strong></h4>
 <p><strong>Полная поддержка 19.0.1</strong></p>
+
+<p><strong>758</strong>:</p>
+<ul>
+  <li>[<strong>Исправлено</strong>] [Semi-Stock] - исправлена ошибка, из-за которой не работал онлайн-режим</li>
+  <li>[<strong>Исправлено</strong>] [DBI] - возвращена английская версия по умолчанию (хотя и не новая, но работает стабильно; сейчас обновляется только русская версия, которую можно скачать через Uberhand &gt; packages &gt; settings)</li>
+</ul>
 
 <p><strong>756</strong>:</p>
 <ul>
